# 3d-rubiks-cube

./: README.md  cores.py  cube.py  main.py  piece.py  pyproject.toml
